--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,3 +10,4 @@ salvo = { version = "0.59.0", features = ["full"] }
 tokio = { version = "1.12.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+dotenv = "0.15.0"
