--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-salvo = { version = "0.59.0", features = ["full"] }
+rust-embed.workspace = true
+salvo = { version = "0.66.2", features = ["full"] }
 tokio = { version = "1.12.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
