Basic Docker running

--- a/.github/workflows/rust_ci.yml
+++ b/.github/workflows/rust_ci.yml
@@ -25,3 +25,10 @@ jobs:
       uses: actions-rs/cargo@v1
       with:
         command: test
+
+    - name: Deploy to Local VM
+      if: env.LOCAL_DEPLOYMENT != ''
+      run: |
+        scp target/debug/server $LOCAL_DEPLOYMENT:/usr/local/bin
+        ssh $LOCAL_DEPLOYMENT 'systemctl restart my_rust_app_service'
+      shell: bash
