--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,7 +8,11 @@ edition = "2021"
 [dependencies]
 rust-embed.workspace = true
 salvo = { version = "0.67.2", features = ["full"] }
-tokio = { version = "1.12.0", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 dotenv = "0.15.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio-postgres = "0.7"
+deadpool-postgres = "0.13.2"
