--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dotenv = "0.15.0"
+sqlx = { version = "0.7.4", features = [
+    "runtime-tokio",
+    "macros",
+    "tls-rustls",
+    "postgres",
+] }
+common = { path = "../common" }
