--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,3 +16,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio-postgres = "0.7"
 deadpool-postgres = "0.13.2"
+db = { path = "../db" }
+common = { path = "../common" }
