--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -8,3 +8,9 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sqlx = { version = "0.7.4", features = [
+    "runtime-tokio",
+    "macros",
+    "tls-rustls",
+    "postgres",
+] }
