--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -13,4 +13,7 @@ sqlx = { version = "0.7.4", features = [
     "macros",
     "tls-rustls",
     "postgres",
+    "migrate",
+    "chrono",
 ] }
+chrono = { version = "0.4", features = ["serde"] }
