--- a/.github/workflows/rust_ci.yml
+++ b/.github/workflows/rust_ci.yml
@@ -6,6 +6,9 @@ jobs:
   build_and_test:
     runs-on: ubuntu-latest
 
+    env:
+      SQLX_OFFLINE: true
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Rust
