--- a/.github/workflows/rust_ci.yml
+++ b/.github/workflows/rust_ci.yml
@@ -22,7 +22,7 @@ jobs:
       run: cargo install sqlx-cli --no-default-features --features rustls,postgres
 
     - name: Prepare SQLx (optional)
-      run: cargo sqlx prepare -- --all-targets --all-features --workspace
+      run: (cd db && cargo sqlx prepare -- --all-targets --all-features)
     
     - name: Build
       uses: actions-rs/cargo@v1
