--- a/.github/workflows/rust_ci.yml
+++ b/.github/workflows/rust_ci.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install SQLx CLI
       run: cargo install sqlx-cli --no-default-features --features rustls,postgres
 
-    - name: Prepare SQLx (optional)
+    - name: Prepare SQLx
       run: (cd db && cargo sqlx prepare -- --all-targets --all-features)
     
     - name: Build
