--- a/db/postgres/postgresql.conf
+++ b/db/postgres/postgresql.conf
@@ -1,4 +1,4 @@
 ssl = on
-ssl_cert_file = '/etc/ssl/certs/server.crt'
+ssl_cert_file = '/etc/ssl/private/server.crt'
 ssl_key_file = '/etc/ssl/private/server.key'
 listen_addresses = '*'
