--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,34 @@
-version: '3'
+version: "3"
 services:
-
   db:
     build:
       context: .
       dockerfile: ./db/postgres/Dockerfile
-    container_name: db
-    env_file: 
-      - ./db/postgres/.env
+    container_name: pgdb
+    env_file:
+      - ./db/.env
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
       - /home/johannes/.local/ssl/certs/cwe/server.crt:/etc/ssl/private/server.crt
       - /home/johannes/.local/ssl/certs/cwe/server.key:/etc/ssl/private/server.key
-    
 
   server:
     container_name: server
     build:
       context: .
       dockerfile: ./server/Dockerfile
-    restart: yes
+    restart: always
     depends_on:
       - db
     env_file: ./server/.env
     ports:
-      - "443:443"
+      - "443:8443"
     volumes:
-      - /home/johannes/.local/ssl/certs/cwe:/ssl/certs/cwe
-      - /home/johannes/Projects/cwe/server/.env:/usr/src/app/.env
+      - /home/johannes/.local/ssl/certs/cwe/cwe.crt:/ssl/private/server.crt
+      - /home/johannes/.local/ssl/certs/cwe/cwe.key:/ssl/private/server.key
+      - /home/johannes/Projects/cwe/server/.env:/usr/src/app/.env:ro
 
 volumes:
   pgdata:
