--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - /home/johannes/.local/ssl/certs/cwe/server.key:/etc/ssl/private/server.key
 
   server:
-    container_name: server
+    container_name: web-server
     build:
       context: .
       dockerfile: ./server/Dockerfile
