--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -21,8 +21,8 @@ backend http_back
 # Admin interface configuration
 frontend stats
     mode http
-    bind *:8444 ssl crt /usr/local/etc/haproxy/certs/admin.pem
+    bind *:8444 ssl crt /ssl/private/admin.pem
     stats enable
     stats uri /stats
     stats refresh 10s
-    stats auth admin:password
+    stats auth "$HAPROXY_STATS_USER:$HAPROXY_STATS_PASS"
