Cluster deployment minkube works

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -16,7 +16,7 @@ frontend http_front
 
 backend http_back
     balance leastconn
-    server server1 server:8443 check
+    server-template web-server 1-10 web-server:8443 check
 
 # Admin interface configuration
 frontend stats
