--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -4,19 +4,43 @@ global
 
 defaults
     log     global
-    mode    tcp
-    option  tcplog
     timeout connect 5000ms
     timeout client  50000ms
     timeout server  50000ms
 
-frontend http_front
+# Frontend for SSL passthrough on port 443
+frontend SSL_PassThrough
+    mode tcp
     bind *:443
-    default_backend http_back
+    tcp-request inspect-delay 5s
+    tcp-request content accept if { req.ssl_hello_type 1 }
+    use_backend web_server_back if { req.ssl_sni -i web.common-work-education.co.uk }
+    default_backend bk_tcp_to_https
 
-backend http_back
+# Default backend for SSL passthrough
+backend bk_tcp_to_https
+mode tcp
+server haproxy 127.0.0.1:8443 check
+
+# Frontend for SSL termination on port 8443
+frontend SSL_Termination
+    mode http
+    bind *:8443 ssl crt /ssl/private/admin.pem
+    use_backend weather_back_http if { hdr(host) -i weather.common-work-education.co.uk }
+
+# Backend for web server (SSL passthrough)
+backend web_server_back
+    mode tcp
     balance leastconn
     server-template web-server 1-10 web-server:8443 check
+
+# Backend for weather service (SSL termination)
+backend weather_back_http
+    mode http
+    balance leastconn
+    server-template weather 1-10 weather:8080 check
+    http-request set-header X-Forwarded-Port %[dst_port]
+    http-request add-header X-Forwarded-Proto https if { ssl_fc }
 
 # Admin interface configuration
 frontend stats
