--- a/java-server/src/main/resources/application.properties
+++ b/java-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://pgdb:5432/java?ssl=true&sslmode=require
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://pgdb:5432/${POSTGRES_DB}?ssl=true&sslmode=require
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.initialization-mode=always
