--- a/env.example
+++ b/env.example
@@ -1,4 +1,20 @@
+# Application Configuration
 CERT_PATH=
 KEY_PATH=
-ADDRESS=
-PORT=
+ADDRESS=localhost
+PORT=8443
+
+# Database Configuration for Local
+DB_HOST=pgdb
+DB_PORT=5432
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=
+DB_POOL_SIZE=10
+DATABASE_URL=postgres://postgres:${DB_PASSWORD}@pgdb:5432/postgres?sslmode=require
+
+
+# Database Configuration for Docker
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=
+POSTGRES_DB=postgres
